--- a/PHP Contact Form/index.html
+++ b/PHP Contact Form/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
+    <script defer src="main.js"></script>
     <title>PHP Contact Form</title>
   </head>
   <body>
@@ -12,29 +13,27 @@
         <div class="form-header">
           <h1 class="title">PHP Contact Form</h1>
           <div class="form-parts">
-            <div class="form-parts-item active">1</div>
+            <div class="form-parts-item active-form">1</div>
             <div class="form-parts-item">2</div>
             <div class="form-parts-item">3</div>
           </div>
         </div>
-        <div class="form-body">
+        <div class="form-body active">
           <h2 class="form-part-title">Enter personal credentials</h2>
-          <div class="error">
-            Some error
-          </div>
+          <div class="error"></div>
           <form action="">
             <div class="form-item">
               <label for="name">Name</label>
-              <input type="text" />
+              <input type="text" id="name" />
             </div>
             <div class="form-item">
               <label for="name">Email</label>
-              <input type="email" />
+              <input type="email" id="email" />
             </div>
             <div class="form-item-inline">
               <div class="form-item">
                 <label for="age">Age</label>
-                <input type="number" />
+                <input type="number" id="age" min="1" max="100" />
               </div>
               <div class="form-item">
                 <label for="gender">Gender</label>
@@ -47,16 +46,103 @@
               </div>
             </div>
             <div class="form-item">
+              <label for="address">Complete Address</label>
+              <input type="text" id="address" />
+            </div>
+            <button class="submit" id="next" type="submit">Next</button>
+          </form>
+        </div>
+        <div class="form-body">
+          <h2 class="form-part-title">Enter other details</h2>
+          <div class="error"></div>
+          <form action="">
+            <div class="form-item">
               <label for="profession">Profession</label>
-              <input list="profession" name="profession" />
+              <input list="profession" name="profession" id="professionList" />
               <datalist id="profession">
                 <option value="professor">Professor</option>
                 <option value="web-developer">Web developer</option>
                 <option value="student">Student</option>
               </datalist>
             </div>
-            <button id="next" type="submit">Next</button>
+            <div class="form-item">
+              <label for="education">Highest educational attainment</label>
+              <select name="education" id="education">
+                <option value="none">-</option>
+                <option value="highSchoolUndergraduate"
+                  >High School Undergraduate</option
+                >
+                <option value="highschoolGraduate">High School Graduate</option>
+                <option value="collegeUndergraduate"
+                  >College Undergraduate</option
+                >
+                <option value="bachelorsDegree">Bachelor's Degree</option>
+                <option value="masteralDegree">Master's Degree</option>
+                <option value="doctorateDegree">Doctorate Degree</option>
+              </select>
+            </div>
+            <div class="form-item">
+              <label for="workplace">Current Workplace</label>
+              <input type="text" id="currentWorkplace" />
+            </div>
+            <div class="form-item">
+              <label for="workplaceAddress">Workplace Address</label>
+              <input type="text" id="workplaceAddress" />
+            </div>
+            <div class="form-item-inline">
+              <button class="submit" id="previous" type="submit">
+                Previous
+              </button>
+              <button class="submit" id="next" type="submit">Next</button>
+            </div>
           </form>
+        </div>
+        <div class="form-body">
+          <h2 class="form-part-title">Confirm details</h2>
+          <table>
+            <tr>
+              <td>Name :</td>
+              <td>Mark Joshua Dalire</td>
+            </tr>
+            <tr>
+              <td>Email :</td>
+              <td>mmdalire@email.com</td>
+            </tr>
+            <tr>
+              <td>Age :</td>
+              <td>21 years old</td>
+            </tr>
+            <tr>
+              <td>Gender :</td>
+              <td>Male</td>
+            </tr>
+            <tr>
+              <td>Complete Address :</td>
+              <td>Blk 11 Lot 1, Camella Montego, Antipolo City</td>
+            </tr>
+            <tr>
+              <td>Profession :</td>
+              <td>Web Developer</td>
+            </tr>
+            <tr>
+              <td>Highest Educational Attainment :</td>
+              <td>Bachelor's Degree</td>
+            </tr>
+            <tr>
+              <td>Current Workplace :</td>
+              <td>N/A</td>
+            </tr>
+            <tr>
+              <td>Current Workplace Address:</td>
+              <td>N/A</td>
+            </tr>
+          </table>
+          <div class="form-item-inline">
+            <button class="submit" id="previous" type="submit">
+              Previous
+            </button>
+            <button class="submit" id="next" type="submit">Next</button>
+          </div>
         </div>
       </div>
     </div>
