--- a/PHP Contact Form/index.html
+++ b/PHP Contact Form/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="footer-content">
           <h3>Date started: June 20, 2020</h3>
-          <h3>Date ended:</h3>
+          <h3>Date ended: June 23, 2020</h3>
         </div>
       </div>
     </footer>
